2003-11-28  Moritz Schulte  <mo@g10code.com>

	* test.c, test.h, test-glue.h: New files.
	* benchmark.c: Rewritten.
	* standalone.c: New file.
	* cipher.c: New file.
	* ac.c, ac-schemes.c, basic.c, encoding.c, keygen.c, prime.c,
	pubkey.c, register.c, testapi.c, tsexp.c: Modified for new test
	suite.

2003-11-02  Moritz Schulte  <mo@g10code.com>

	* benchmark.c: Rewritten, with support for ac.

2003-10-28  Moritz Schulte  <mo@g10code.com>

	* Makefile.am (TESTS): Added: encoding.
	* encoding.c: New file.

	* prime.c (check_primes): Be non-verbose by default.
	* ac.c (check_run): Removed unused variable.

2003-10-17  Moritz Schulte  <mo@g10code.com>

	* Makefile.am (TESTS): Added: ac-schemes.

	* ac-schemes.c: New file.

2003-09-18  Moritz Schulte  <mo@g10code.com>

	* ac.c (check_one): Adjust to ac API changes.

2003-09-04  Werner Koch  <wk@gnupg.org>

	* pubkey.c (check_keys_crypt): Fix for compatibility mode.

2003-09-02  Moritz Schulte  <mo@g10code.com>

	* Makefile.am (TESTS): Added: prime.

	* prime.c: New file.

2003-08-27  Moritz Schulte  <mo@g10code.com>

	* basic.c (check_ciphers): Added: Serpent.
	Write braces around flags.

2003-08-04  Moritz Schulte  <moritz@g10code.com>

	* benchmark.c (do_powm): Adjust for new gcry_mpi_scan interface.

2003-07-23  Moritz Schulte  <moritz@g10code.com>

	* ac.c (key_copy): New function...
	(check_one): ... use it.

2003-07-22  Moritz Schulte  <moritz@g10code.com>

	* basic.c (check_ciphers): Use gcry_cipher_map_name.

2003-07-18  Moritz Schulte  <moritz@g10code.com>

	* ac.c (check_run): Renamed to ...
	(check_one): ... this, changed calling interface.
	(check_run): New function.

	* register.c: Adjust gcry_cipher_spec_t structure.

2003-07-14  Moritz Schulte  <moritz@g10code.com>

	* register.c: Adjust cipher specification structure.

	* benchmark.c: New file.
	* testapi.c: New file.

	* Makefile.am (EXTRA_PROGRAMS): Set to: benchmark testapi.
	(check_PROGRAMS): Set to: $(TESTS).
